- TC.02 and 0.3 finished - Fixed some minor bugs in SimulatorController - Modified constructor of SimulatorController -> now take (context, port) - TODO: TC.05 in ConfigLoaderTest